PackageComponents/objects/XponentSalesData__c/XponentSalesData__c.object-meta.xml
<CustomObject>
    <description>Xponent SalesData provides the ability of using standard SF reporting and building
        charts.</description>
    <label>Xponent SalesData</label>
    <nameField>
        <displayFormat>XSD-{0000000000}</displayFormat>
        <label>Xponent SalesData Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xponent SalesData</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>