PackageComponents/objects/XponentSalesData__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>The Id of the account that's associated with the drug sales distribution data.</description>
    <inlineHelpText>The identifier of the account that's associated with the drug sales distribution data.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>XponentSalesData_Account</relationshipName>
    <type>Lookup</type>
</CustomField>