PackageComponents/objects/XponentSalesData__c/fields/BrandId__c.field-meta.xml
<CustomField>
    <fullName>BrandId__c</fullName>
    <description>The identifier of the brand that the drug sales distribution data is captured for.</description>
    <inlineHelpText>The id of the brand that the drug sales distribution data is captured for.</inlineHelpText>
    <label>Brand</label>
    <referenceTo>LifeSciMarketableProduct</referenceTo>
    <relationshipName>XponentSalesData_Brand</relationshipName>
    <type>Lookup</type>
</CustomField>