PackageComponents/objects/XponentSalesData__c/fields/ExternalDrugPscpIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalDrugPscpIdentifier__c</fullName>
    <description>The external ID of the drug prescription sales data.</description>
    <inlineHelpText>The external ID of the drug prescription sales data.</inlineHelpText>
    <label>External Drug Prescription Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>