PackageComponents/objects/XponentSalesData__c/fields/Filter04__c.field-meta.xml
<CustomField>
    <fullName>Filter04__c</fullName>
    <description>The value used to filter the drug sales distribution data.</description>
    <inlineHelpText>The value used to filter the drug sales distribution data.</inlineHelpText>
    <label>Filter 04</label>
    <length>100</length>
    <type>Text</type>
</CustomField>