PackageComponents/objects/XponentSalesData__c/fields/Filter06__c.field-meta.xml
<CustomField>
    <fullName>Filter06__c</fullName>
    <description>The value used to filter the drug sales distribution data.</description>
    <inlineHelpText>The value used to filter the drug sales distribution data.</inlineHelpText>
    <label>Filter 06</label>
    <length>100</length>
    <type>Text</type>
</CustomField>