PackageComponents/objects/XponentSalesData__c/fields/Measure01Period01__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period01__c</fullName>
    <description>The sales data measure 01 value for period 01.</description>
    <inlineHelpText>The sales data measure 01 value for period 01.</inlineHelpText>
    <label>Measure 01 Period 01</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>