PackageComponents/objects/XponentSalesData__c/fields/Measure01Period02__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period02__c</fullName>
    <description>The sales data measure 01 value for period 02.</description>
    <inlineHelpText>The sales data measure 01 value for period 02.</inlineHelpText>
    <label>Measure 01 Period 02</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>