PackageComponents/objects/XponentSalesData__c/fields/Measure01Period03__c.field-meta.xml
<CustomField>
    <fullName>Measure01Period03__c</fullName>
    <description>The sales data measure 01 value for period 03.</description>
    <inlineHelpText>The sales data measure 01 value for period 03.</inlineHelpText>
    <label>Measure 01 Period 03</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>