PackageComponents/objects/XponentSalesData__c/fields/Measure01Total__c.field-meta.xml
<CustomField>
    <fullName>Measure01Total__c</fullName>
    <description>The sum of all sales data measure 01 values.</description>
    <inlineHelpText>The sum of all sales data measure 01 values.</inlineHelpText>
    <label>Measure 01 Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>