PackageComponents/objects/XponentSalesData__c/fields/Measure08Total__c.field-meta.xml
<CustomField>
    <fullName>Measure08Total__c</fullName>
    <description>The sum of all sales data measure 08 values.</description>
    <inlineHelpText>The sum of all sales data measure 08 values.</inlineHelpText>
    <label>Measure 08 Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>