PackageComponents/objects/XponentSalesData__c/fields/Period06Name__c.field-meta.xml
<CustomField>
    <fullName>Period06Name__c</fullName>
    <description>The name of the sales data period 06.</description>
    <inlineHelpText>The name of the sales data period 06.</inlineHelpText>
    <label>Period 06 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>