PackageComponents/objects/XponentSalesData__c/fields/Period09Name__c.field-meta.xml
<CustomField>
    <fullName>Period09Name__c</fullName>
    <description>The name of the sales data period 09.</description>
    <inlineHelpText>The name of the sales data period 09.</inlineHelpText>
    <label>Period 09 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>