PackageComponents/objects/XponentSalesData__c/fields/Period23Name__c.field-meta.xml
<CustomField>
    <fullName>Period23Name__c</fullName>
    <description>The name of the sales data period 23.</description>
    <inlineHelpText>The name of the sales data period 23.</inlineHelpText>
    <label>Period 23 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>