PackageComponents/objects/XponentSalesData__c/fields/PeriodType__c.field-meta.xml
<CustomField>
    <fullName>PeriodType__c</fullName>
    <description>Indicates the type of the period that the drug sales distribution data is captured for.</description>
    <inlineHelpText>Indicates the type of the period that the drug sales distribution data is captured for.</inlineHelpText>
    <label>Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>