PackageComponents/objects/XponentSalesData__c/fields/TerrGeoAssignmentRuleId__c.field-meta.xml
<CustomField>
    <fullName>TerrGeoAssignmentRuleId__c</fullName>
    <description>The name of the brick that the drug sales distribution data is captured for.</description>
    <inlineHelpText>The name of the brick that the drug sales distribution data is captured for.</inlineHelpText>
    <label>Territory Geo Assignment Rule</label>
    <referenceTo>TerrGeoAssignmentRule</referenceTo>
    <relationshipName>XponentSalesData_TerrGeoAssignRule</relationshipName>
    <type>Lookup</type>
</CustomField>