PackageComponents/objects/XponentSalesData__c/fields/TerritoryId__c.field-meta.xml
<CustomField>
    <fullName>TerritoryId__c</fullName>
    <description>The identifier of the territory associated with the drug sales distribution data.</description>
    <inlineHelpText>The identifier of the territory associated with the drug sales distribution data.</inlineHelpText>
    <label>Territory Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>