PackageComponents/objects/XponentSalesData__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AccountId__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>BrandId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>