PackageComponents/objects/XponentSalesData__c/listViews/All_Xponent_SalesData.listView-meta.xml
<ListView>
    <fullName>All_Xponent_SalesData</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>BrandId__c</columns>
    <columns>TerrGeoAssignmentRuleId__c</columns>
    <columns>ChannelType__c</columns>
    <columns>DataCaptureDate__c</columns>
    <columns>PeriodType__c</columns>
    <columns>MarketId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Xponent SalesData</label>
</ListView>